--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-   "name": "ksd-bot",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "devDependencies": {
-      "@types/node": "^8.0.29",
-      "nodemon": "^2.0.14",
-      "simple-git": "^2.47.0",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "@vk-io/hear": "^1.1.0",
-      "chalk": "^4.1.2",
-      "dotenv": "^10.0.0",
-      "middleware-io": "^2.8.0",
-      "mysql": "^2.14.1",
-      "pg": "^8.7.1",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.38",
-      "vk-io": "^4.4.0"
-   },
-   "scripts": {
-      "dev": "NODE_ENV=development nodemon src/index.ts",
-      "start": "ts-node src/index.ts"
-   }
+  "name": "ksd-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/lodash": "^4.14.176",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^8.0.29",
+    "nodemon": "^2.0.14",
+    "simple-git": "^2.47.0",
+    "ts-node": "3.3.0",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@vk-io/hear": "^1.1.0",
+    "chalk": "^4.1.2",
+    "delay": "^5.0.0",
+    "dotenv": "^10.0.0",
+    "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
+    "lvovich": "^1.0.16",
+    "middleware-io": "^2.8.0",
+    "moment": "^2.29.1",
+    "mysql": "^2.14.1",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.38",
+    "vk-io": "^4.4.0"
+  },
+  "scripts": {
+    "dev": "NODE_ENV=development nodemon ./src/index.ts",
+    "start": "ts-node src/index.ts"
+  }
 }
